--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #00ffff;
+      color: #000000;
+      background-color: #ffffff;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
